--- a/index.html
+++ b/index.html
@@ -4,68 +4,70 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link href="myfirstweb.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="myfirstweb.css">
 </head>
 <body>
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+        <img class="logo" src="logo.png">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#">VRゲームとは</a>
+        <a href="#">ヘッドセットの入手方法</a>
+        <a href="#" class="login">開発者</a>
       </div>
     </div>
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>飛び立とう<br>誰も見たことがない未来都市へ</h1>
+      <p>VR未来都市レーシングはゴールまでのタイムを競うレーシングゲームです。<br>コースの仕掛けを駆使して最速タイムを目指しましょう。</p>
       <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+        <a href="#" class="btn signup">今すぐダウンロード</a>
+        <p></p>
+        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>精密工学科HP</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>精密LabHP</a>
       </div>
     </div>
   </div>
   <div class="lesson-wrapper">
     <div class="container">
+        
       <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
+        <h2>コースギミックの紹介
+        </h2>
       </div>
       <div class="lessons">
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/html.png">
-            <p>HTML & CSS</p>
+            <img src="リング.png" class="icon-image">
+            <p>ダッシュリング</p>
           </div>
-          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+          <p class="text-contents">ダッシュリングを潜ると加速します。なるべくたくさん潜りましょう。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-            <p>jQuery</p>
+            <img src="毒ガス.png" class="icon-image">
+            <p>毒ガス</p>
           </div>
-          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
+          <p class="text-contents">毒ガスに触れると減速してしまいます。なるべく避けましょう。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/ruby.png">
-            <p>Ruby</p>
+            <img src="ベルトコンベア.png" alt ="a" class="icon-image">
+            <p>ベルトコンベア</p>
           </div>
-          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
+          <p class="text-contents">ベルトコンベアに乗ると流されます。青いコンベアは進行方向に、赤いコンベアは進行方向と逆向きに流されます。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="https://prog-8.com/images/html/advanced/php.png">
-            <p>PHP</p>
+            <img src="分かれ道.png" class="icon-image">
+            <p>分かれ道</p>
           </div>
-          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+          <p class="text-contents">コース終盤には３つの分かれ道があります。好きな道を選びましょう。</p>
         </div>
       </div>
       <div class="clear"></div>
@@ -73,17 +75,19 @@
   </div>
   <div class="message-wrapper">
     <div class="container">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/56B7eacx_4c?si=qL96c-4kay0ZPQqJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <div class="heading">
-        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
-        <h3>Let's learn to code, learn to be creative!</h3>
+        <h2>さぁ、あなたも未来都市へ旅立とう！</h2>
+        <h3>Let's travel to the future city!</h3>
       </div>
-      <span class="btn message">さっそく開発する</span>
+      <span class="btn message">ダウンロード</span>
     </div>
   </div>
   <footer>
     <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>Learn to Code, Learn to be Creative.</p>
+      <img src="logo.png">
+
+      <p>Providing Brand New Experience.</p>
     </div>
   </footer>
 </body>
