--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="lessons">
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="リング.png" class="icon-image">
+            <img src="ring.png" class="icon-image">
             <p>ダッシュリング</p>
           </div>
           <p class="text-contents">ダッシュリングを潜ると加速します。なるべくたくさん潜りましょう。</p>
