--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
       <div class="lessons">
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="ring.png" class="icon-image">
+            <img src="https://github.com/Yota-Conga/MyFirstWebsite/blob/main/ring.png?raw=true" class="icon-image">
             <p>ダッシュリング</p>
           </div>
           <p class="text-contents">ダッシュリングを潜ると加速します。なるべくたくさん潜りましょう。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="毒ガス.png" class="icon-image">
+            <img src="https://github.com/Yota-Conga/MyFirstWebsite/blob/main/毒ガス.png?raw=true" class="icon-image">
             <p>毒ガス</p>
           </div>
           <p class="text-contents">毒ガスに触れると減速してしまいます。なるべく避けましょう。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="ベルトコンベア.png" alt ="a" class="icon-image">
+            <img src="https://github.com/Yota-Conga/MyFirstWebsite/blob/main/ベルトコンベア.png?raw=true" alt ="a" class="icon-image">
             <p>ベルトコンベア</p>
           </div>
           <p class="text-contents">ベルトコンベアに乗ると流されます。青いコンベアは進行方向に、赤いコンベアは進行方向と逆向きに流されます。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="分かれ道.png" class="icon-image">
+            <img src="https://github.com/Yota-Conga/MyFirstWebsite/blob/main/分かれ道.png?raw=true" class="icon-image">
             <p>分かれ道</p>
           </div>
           <p class="text-contents">コース終盤には３つの分かれ道があります。好きな道を選びましょう。</p>
