--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="btn-wrapper">
         <a href="#" class="btn signup">今すぐダウンロード</a>
         <p></p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>精密工学科HP</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>精密LabHP</a>
+        <a href="https://www.pe.t.u-tokyo.ac.jp" class="btn facebook"><span class="fa fa-facebook"></span>精密工学科HP</a>
+        <a href="https://www.pemayfes.t.u-tokyo.ac.jp/2024/" class="btn twitter"><span class="fa fa-twitter"></span>精密LabHP</a>
       </div>
     </div>
   </div>
