--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="https://github.com/Yota-Conga/MyFirstWebsite/blob/main/毒ガス.png?raw=true" class="icon-image">
+            <img src="https://github.com/Yota-Conga/MyFirstWebsite/blob/main/毒ガス.png?raw=true" alt ="poison"class="icon-image">
             <p>毒ガス</p>
           </div>
           <p class="text-contents">毒ガスに触れると減速してしまいます。なるべく避けましょう。</p>
         </div>
         <div class="lesson">
           <div class="lesson-icon">
-            <img src="https://github.com/Yota-Conga/MyFirstWebsite/blob/main/ベルトコンベア.png?raw=true" alt ="a" class="icon-image">
+            <img src="https://github.com/Yota-Conga/MyFirstWebsite/blob/main/ベルトコンベア.png?raw=true" alt ="belt" class="icon-image">
             <p>ベルトコンベア</p>
           </div>
           <p class="text-contents">ベルトコンベアに乗ると流されます。青いコンベアは進行方向に、赤いコンベアは進行方向と逆向きに流されます。</p>
